editProfile sayfası yapıldı profil fotoğrafı seçme ve düzenleme sayfaları yapıldı.İzinlerde sıkıntı var düzenlenecek.Anasayfa düzenlendi.

--- a/app/src/main/res/drawable/spinnerstyle.xml
+++ b/app/src/main/res/drawable/spinnerstyle.xml
@@ -15,7 +15,7 @@
                 </shape>
             </item>
             <item>
-                <bitmap android:gravity="bottom|right" android:src="@drawable/recycling" />
+                <bitmap android:gravity="bottom|right" android:src="@drawable/home" />
             </item>
         </layer-list>
     </item>
