--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -3,6 +3,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="post_item_offset">10dp</dimen>
+    <dimen name="cardview_elevation">5dp</dimen>
     <dimen name="card_margin">5dp</dimen>
     <dimen name="card_post_radius">0dp</dimen>
     <dimen name="post_thumbnail_height">160dp</dimen>
