--- a/app/src/main/res/layout/activity_user_intro.xml
+++ b/app/src/main/res/layout/activity_user_intro.xml
@@ -3,7 +3,7 @@
 
 <RelativeLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/backround"
+    android:background="@color/cardview_dark_background"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
