--- a/app/src/main/res/layout/edit_about.xml
+++ b/app/src/main/res/layout/edit_about.xml
@@ -2,7 +2,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:background="@drawable/dialogcorner">
 
     <!--D Ü Z E N L E N E C E K  -->
 
@@ -10,32 +11,34 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/edittext_back"
         android:clickable="true"
         android:focusable="true"
+        android:focusableInTouchMode="true"
         android:foreground="?android:attr/selectableItemBackground"
         android:orientation="vertical">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+
+            android:background="@drawable/dialogtitle">
 
             <Button
+                android:id="@+id/aboutCancel"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:id="@+id/aboutCancel"
-                android:layout_alignParentRight="true"
-                android:layout_marginEnd="15dp"
+                android:layout_alignParentEnd="true"
                 android:layout_centerInParent="true"
+                android:layout_marginEnd="15dp"
                 android:background="@drawable/ic_close_black_24dp"
                 android:tint="@color/black" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
                 android:padding="12dp"
                 android:text="HAKKIMDA"
-                android:layout_centerHorizontal="true"
                 android:textColor="@color/cardview_dark_background"
                 android:textSize="20sp"
                 android:textStyle="bold|italic" />
@@ -46,6 +49,8 @@
             android:layout_height="wrap_content"
             app:counterEnabled="true"
             app:counterMaxLength="300"
+
+            android:layout_marginTop="10dp"
             app:counterOverflowTextAppearance="@color/colorAccent">
 
 
@@ -56,7 +61,6 @@
                 android:layout_marginBottom="10dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-
                 android:hint="Kısaca Kendinizden Bahsediniz "
                 android:inputType="textMultiLine"
                 android:textColor="@color/primary_dark"
@@ -74,7 +78,12 @@
                 android:id="@+id/aboutSave"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="15dp"
+                android:layout_marginTop="15dp"
+                android:background="@drawable/roundedbutton"
+                android:drawableStart="@drawable/ic_add_black_24dp"
+                android:padding="10dp"
                 android:text="Kaydet"
                 android:theme="@style/ButtonStyle" />
 
