--- a/app/src/main/res/layout/edit_deneyim.xml
+++ b/app/src/main/res/layout/edit_deneyim.xml
@@ -2,7 +2,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:background="@drawable/dialogcorner">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,17 +15,17 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:background="@drawable/white_grey_border_bottom"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="@drawable/dialogtitle">
 
             <Button
+                android:id="@+id/expCancel"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:id="@+id/expCancel"
-                android:background="@drawable/ic_close_black_24dp"
                 android:layout_alignParentEnd="true"
                 android:layout_centerInParent="true"
                 android:layout_marginEnd="15dp"
+                android:background="@drawable/ic_close_black_24dp"
                 android:tint="@color/black" />
 
             <TextView
@@ -42,68 +43,90 @@
             android:id="@+id/burasıEklenecek"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:orientation="vertical">
 
 
-                <EditText
-                    android:id="@+id/deneyimPozisyon"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/edittext_back"
-                    android:hint="Pozisyon"
-                    android:padding="5dp" />
+            <EditText
+                android:id="@+id/deneyimPozisyon"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/edittext_back"
+                android:hint="Pozisyon"
+                android:lineSpacingExtra="4dp"
+                android:padding="7dp"
+                android:textSize="14sp" />
 
-                <EditText
-                    android:id="@+id/deneyimAy"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/edittext_back"
-                    android:hint="Kac Ay Çalıştınız"
-                    android:padding="5dp" />
+            <EditText
+                android:id="@+id/deneyimAy"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/edittext_back"
+                android:hint="Kac Ay Çalıştınız"
+                android:inputType="date"
+                android:lineSpacingExtra="4dp"
+                android:padding="7dp"
+                android:textSize="14sp" />
 
 
+            <EditText
+                android:id="@+id/deneyimKurum"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/edittext_back"
+                android:hint="Kurum Adı "
+                android:lineSpacingExtra="4dp"
+                android:padding="7dp"
+                android:textSize="14sp" />
 
-
-
-                <EditText
-                    android:id="@+id/deneyimKurum"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/edittext_back"
-                    android:hint="Kurum Adı "
-                    android:padding="5dp" />
-
-                <EditText
-                    android:id="@+id/deneyimLokasyon"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/edittext_back"
-                    android:hint="Lokasyon Bilgisi"
-                    android:padding="5dp" />
+            <EditText
+                android:id="@+id/deneyimLokasyon"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/edittext_back"
+                android:hint="Lokasyon Bilgisi"
+                android:lineSpacingExtra="4dp"
+                android:padding="7dp"
+                android:textSize="14sp" />
 
         </LinearLayout>
 
 
-
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_marginTop="15dp"
             android:layout_height="wrap_content">
 
             <Button
                 android:id="@+id/expSave"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="15dp"
+                android:layout_marginTop="15dp"
+                android:background="@drawable/roundedbutton"
+
+                android:drawableLeft="@drawable/ic_add_black_24dp"
+                android:padding="10dp"
                 android:text="Kaydet"
                 android:theme="@style/ButtonStyle" />
 
