--- a/app/src/main/res/layout/edit_egitim.xml
+++ b/app/src/main/res/layout/edit_egitim.xml
@@ -6,6 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/dialogcorner"
     android:clickable="true"
     android:focusable="true"
     android:foreground="?android:attr/selectableItemBackground"
@@ -14,7 +15,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/white_grey_border_bottom">
+        android:background="@drawable/dialogtitle">
 
         <Button
             android:id="@+id/egitimCancel"
@@ -163,7 +164,12 @@
                 android:id="@+id/egitimSave"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
+               android:layout_centerHorizontal="true"
+                android:background="@drawable/roundedbutton"
+                android:padding="10dp"
+                android:drawableLeft="@drawable/ic_add_black_24dp"
+                android:layout_marginBottom="15dp"
+                android:layout_marginTop="15dp"
                 android:text="Kaydet"
                 android:theme="@style/ButtonStyle" />
 
