--- a/app/src/main/res/layout/edit_yetenek.xml
+++ b/app/src/main/res/layout/edit_yetenek.xml
@@ -1,93 +1,114 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:clickable="true"
+    android:focusable="true"
+    android:background="@drawable/dialogcorner"
+    android:foreground="?android:attr/selectableItemBackground"
+    android:orientation="vertical">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:background="@drawable/dialogtitle"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/closeDialog"
+            android:layout_width="24dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="-20dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerInParent="true"
+            android:layout_marginEnd="10dp"
+            android:src="@drawable/ic_close_black_24dp"
+            android:tint="@color/black" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:padding="12dp"
+            android:text="Yetenekler"
+            android:textColor="@color/cardview_dark_background"
+            android:textSize="20sp"
+            android:textStyle="bold|italic" />
+    </RelativeLayout>
 
     <LinearLayout
+        android:id="@+id/eklenecekYetenek"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:clickable="true"
-        android:focusable="true"
-        android:foreground="?android:attr/selectableItemBackground"
         android:orientation="vertical">
 
-        <RelativeLayout
+        <EditText
+            android:id="@+id/yetenek_content"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/edittext_back"
+            android:lineSpacingExtra="4dp"
+            android:lines="2"
+            android:paddingLeft="7dp"
+            android:hint="Yetkinlik "
+            android:textColor="@color/blue"
+            android:textSize="14sp" />
 
-            <ImageView
-                android:layout_width="24dp"
-                android:layout_height="30dp"
-                android:layout_alignParentEnd="true"
-                android:layout_centerInParent="true"
-                android:layout_marginEnd="5dp"
-                android:src="@drawable/add"
-                android:tint="@color/black" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:orientation="horizontal"
+            android:padding="3dp"
+            android:weightSum="1">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:padding="12dp"
-                android:text="Yetenekler"
+                android:layout_gravity="center"
+                android:layout_weight="0.8"
+                android:text="Seviye"
                 android:textColor="@color/cardview_dark_background"
                 android:textSize="20sp"
                 android:textStyle="bold|italic" />
-        </RelativeLayout>
 
-        <LinearLayout
-            android:id="@+id/eklenecekYetenek"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <EditText
-                android:id="@+id/about_content"
-                android:layout_width="match_parent"
+            <RatingBar
+                android:id="@+id/yetenekRatingBar"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/edittext_back"
-                android:lineSpacingExtra="4dp"
-                android:lines="2"
-                android:paddingLeft="7dp"
-                android:text="Yetkinlik "
-                android:textColor="#8c8c8c"
-                android:textSize="14sp" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:padding="3dp"
-                android:weightSum="1"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:text="Seviye"
-                    android:textColor="@color/cardview_dark_background"
-                    android:textSize="20sp"
-                    android:textStyle="bold|italic"
-                    android:layout_gravity="center"
-                    android:layout_weight="0.8"
-                    android:layout_height="wrap_content" />
-
-                <RatingBar
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:numStars="5"
-                    android:layout_weight="0.1"
-                    android:theme="@style/RatingBar"
-                    android:stepSize="1.0"
-                    android:rating="3" />
-
-            </LinearLayout>
-
+                android:gravity="center_vertical"
+                android:numStars="5"
+                android:scaleY="0.8"
+                android:scaleX="0.8"
+                android:stepSize="1.0"
+                android:theme="@style/RatingBar" />
 
         </LinearLayout>
 
+        <Button
+            android:id="@+id/yetenekSave"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/roundedbutton"
+            android:padding="10dp"
+            android:drawableLeft="@drawable/ic_add_black_24dp"
+            android:layout_marginBottom="15dp"
+            android:layout_marginTop="15dp"
+            android:text="Kaydet"
+            android:theme="@style/ButtonStyle" />
+
+
     </LinearLayout>
 
-</merge>
+</LinearLayout>
+
+</LinearLayout>
