--- a/app/src/main/res/layout/user_profil_frag.xml
+++ b/app/src/main/res/layout/user_profil_frag.xml
@@ -65,8 +65,8 @@
 
                     <com.mikhaellopez.circularimageview.CircularImageView
                         android:id="@+id/userProfile"
-                        android:layout_width="90dp"
-                        android:layout_height="90dp"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
                         android:layout_alignParentTop="true"
                         android:layout_centerHorizontal="true"
                         android:layout_marginRight="16dp"
@@ -75,6 +75,7 @@
                         app:civ_border_color="@color/TransparentWhite"
                         app:civ_border_width="9dp" />
 
+                    <!--
                     <RelativeLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -85,7 +86,7 @@
                         android:id="@+id/relativeLayout">
 
                     </RelativeLayout>
-
+-->
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -168,10 +169,14 @@
         <android.support.v4.widget.NestedScrollView
 
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:id="@+id/nestedScroll"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="50dp"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <include layout="@layout/profile_content">
+        <include
+
+            layout="@layout/profile_content">
 
         </include>
 
@@ -182,12 +187,12 @@
             android:layout_height="wrap_content"
             android:background="@drawable/circle_fab"
             app:elevation="6dp"
-            app:fabSize="mini"
+            app:fabSize="normal"
             android:id="@+id/editProfileFab"
             android:onClick="editProfile"
            app:backgroundTint="@color/DarkSlateBlue"
             app:layout_anchor="@id/appBarLayout"
-            android:src="@drawable/edit_profi"
+            android:src="@drawable/username"
             app:layout_anchorGravity="bottom|right|end"
             app:pressedTranslationZ="12dp" />
 
@@ -200,7 +205,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginLeft="6dp"
         android:layout_marginRight="6dp"
-        android:background="@drawable/white_grey_border_top"
+        android:background="@color/white"
         android:orientation="horizontal">
 
         <LinearLayout
