--- a/app/src/main/res/layout/deneyimlist_row.xml
+++ b/app/src/main/res/layout/deneyimlist_row.xml
@@ -54,6 +54,7 @@
                 android:textSize="15dp" />
 
             <ImageView
+                android:id="@+id/editDeneyimListRow"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_alignParentEnd="true"
