--- a/app/src/main/res/layout/genelbilgicontent.xml
+++ b/app/src/main/res/layout/genelbilgicontent.xml
@@ -102,7 +102,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="5dp"
                 android:lineSpacingExtra="4dp"
-                android:text="Belirtilmemiş"
+                android:hint="Belirtilmemiş"
                 android:textColor="@color/black"
                 android:textSize="15sp" />
 
@@ -116,7 +116,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="5dp"
                 android:lineSpacingExtra="4dp"
-                android:text="Belirtilmemiş"
+                android:hint="Belirtilmemiş"
                 android:textColor="@color/black"
                 android:textSize="15sp" />
 
@@ -129,7 +129,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="5dp"
                 android:lineSpacingExtra="4dp"
-                android:text="Belirtilmemiş"
+                android:hint="Belirtilmemiş"
                 android:textColor="@color/black"
                 android:textSize="15sp" />
 
@@ -142,7 +142,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="5dp"
                 android:lineSpacingExtra="4dp"
-                android:text="Belirtilmemiş"
+                android:hint="Belirtilmemiş"
                 android:textColor="@color/black"
                 android:textSize="15sp" />
 
@@ -155,7 +155,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="5dp"
                 android:lineSpacingExtra="4dp"
-                android:text="Belirtilmemiş"
+                android:hint="Belirtilmemiş"
                 android:textColor="@color/black"
                 android:textSize="15sp" />
 
