--- a/app/src/main/res/layout/user_profil_frag.xml
+++ b/app/src/main/res/layout/user_profil_frag.xml
@@ -64,7 +64,7 @@
 
 
                     <com.mikhaellopez.circularimageview.CircularImageView
-                        android:id="@+id/userProfile"
+                        android:id="@+id/userProfileImage"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
                         android:layout_alignParentTop="true"
@@ -72,8 +72,8 @@
                         android:layout_marginRight="16dp"
                         android:layout_marginTop="43dp"
                         android:src="@drawable/man"
-                        app:civ_border_color="@color/TransparentWhite"
-                        app:civ_border_width="9dp" />
+                        app:civ_border_color="@color/mycolor2"
+                        app:civ_border_width="5dp" />
 
                     <!--
                     <RelativeLayout
@@ -91,7 +91,7 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@id/userProfile"
+                        android:layout_below="@id/userProfileImage"
                         android:orientation="vertical">
 
                         <TextView
@@ -101,9 +101,10 @@
                             android:layout_marginTop="14dp"
                             android:fontFamily="serif"
                             android:gravity="center"
+                            android:hint="İsim Soyisim"
                             android:maxLines="1"
-                            android:text="Mehmet Demir"
                             android:textColor="#ffffff"
+                            android:textColorHint="@color/white"
                             android:textSize="24sp"
                             android:textStyle="bold|italic" />
 
@@ -112,10 +113,11 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:gravity="center"
+                            android:hint="Bilgisayar Mühendisi"
                             android:maxLines="1"
                             android:padding="4dp"
-                            android:text="Bilgisayar Mühendisi"
                             android:textColor="#bbbbbb"
+                            android:textColorHint="#bbbbbb"
                             android:textSize="12sp" />
 
                         <TextView
@@ -123,40 +125,43 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:gravity="center"
+                            android:hint="İstanbul"
                             android:maxLines="1"
                             android:padding="4dp"
-                            android:text="İstanbul"
                             android:textColor="#ffffff"
+                            android:textColorHint="#ffffff"
                             android:textSize="12sp" />
 
                     </LinearLayout>
 
                     <TextView
+                        android:id="@+id/profilRate"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignTop="@+id/userProfile"
-                        android:layout_toEndOf="@+id/userProfile"
-                        android:id="@+id/profilRate"
+                        android:layout_alignTop="@+id/userProfileImage"
+                        android:layout_toEndOf="@+id/userProfileImage"
                         android:text="% 75"
                         android:textColor="@color/white" />
+
                     <TextView
+                        android:id="@+id/profilActive"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_below="@id/profilRate"
                         android:layout_alignStart="@id/profilRate"
-                        android:textAlignment="center"
-                        android:id="@+id/profilActive"
-                        android:textColor="@color/white"
+                        android:layout_below="@id/profilRate"
                         android:text="Active"
+                        android:textAlignment="center"
+                        android:textColor="@color/white"
 
                         />
+
                     <View
                         android:layout_width="40dp"
                         android:layout_height="1dp"
-                        android:background="@color/white"
                         android:layout_alignStart="@id/profilRate"
+                        android:layout_below="@id/profilActive"
                         android:layout_marginTop="2dp"
-                        android:layout_below="@id/profilActive">
+                        android:background="@color/white">
 
 
                     </View>
@@ -168,34 +173,44 @@
 
         <android.support.v4.widget.NestedScrollView
 
-            android:layout_width="match_parent"
             android:id="@+id/nestedScroll"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="50dp"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <include
+            <include
 
-            layout="@layout/profile_content">
+                layout="@layout/profile_content">
 
-        </include>
+            </include>
+
 
         </android.support.v4.widget.NestedScrollView>
 
         <android.support.design.widget.FloatingActionButton
+            android:id="@+id/editProfileFab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/circle_fab"
+            android:onClick="editProfile"
+            android:src="@drawable/username"
+            app:backgroundTint="@color/mycolor"
             app:elevation="6dp"
             app:fabSize="normal"
-            android:id="@+id/editProfileFab"
-            android:onClick="editProfile"
-           app:backgroundTint="@color/DarkSlateBlue"
             app:layout_anchor="@id/appBarLayout"
-            android:src="@drawable/username"
             app:layout_anchorGravity="bottom|right|end"
             app:pressedTranslationZ="12dp" />
 
+        <ProgressBar
+            android:id="@+id/profileProgress"
+            android:visibility="visible"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+
+
+            />
     </android.support.design.widget.CoordinatorLayout>
 
     <LinearLayout
