--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,8 @@
     <color name="accent">#FFFFFF</color>
     <color name="black">#000</color>
     <color name="orange">#FA0</color>
-
+    <color name="mycolor">#0B5268</color>
+    <color name="mycolor2">#500B5268</color>
     <color name="jet">#222222</color>
     <color name="oil">#333333</color>
     <color name="monsoon">#777777</color>
